@@ -1,3 +1,8 @@
+1998-06-23  Jim Kingdon  <kingdon@harvey.cyclic.com>
+	and Dave Wolfe@Motorola.
+
+	* sanity.sh (modes2): Touch the file before chmod'ing it.
+
 1998-06-21  Ian Lance Taylor  <ian@cygnus.com>
 
 	* update.c (merge_files): Revert changes of 1998-06-19.  Instead,
